--- a/assets/chat.html
+++ b/assets/chat.html
@@ -12,7 +12,7 @@
 		#chat {
 			text-align: left;
 			background: #f1f1f1;
-			height: 600px;
+			height: 630px;
 			padding: 20px;
 		}
 		#send {
@@ -30,10 +30,10 @@
 <span id="username" hidden>{{ .username }}</span>
 <div class="row mt-2">
     <div class="col-sm-4">
-        <div class="container mt-3 border-end border-start">
+        <div class="container border-end border-start">
         </div>
     </div>
-    <div class="col-sm-4 mt-3 mb-3">
+    <div class="col-sm-4 mb-3">
         <div class="container mt-2 mb-3">
 			<div class="input-group mt-2">
 				<input placeholder="say something" id="text" type="text" class="form-control">
@@ -57,7 +57,7 @@
 		</div>
     </div>
     <div class="col-sm-4">
-        <div class="container mt-3 border-end border-start">
+        <div class="container border-end border-start">
         </div>
     </div>
 </div>
