--- a/assets/chat_login.html
+++ b/assets/chat_login.html
@@ -14,7 +14,7 @@
   <body class="text-center">
     
 <main class="form-signin w-100 m-auto">
-  <form action="/chat" method="post" enctype="multipart/form-data">
+  <form action="/chat_room" method="post" enctype="multipart/form-data">
     <img class="mb-4" src="../assets/logo.svg" alt="" width="72" height="57">
     <h1 class="h3 mb-3 fw-normal">欢迎来到moon聊天室，请输入您的id</h1>
 
