--- a/assets/chat_room.html
+++ b/assets/chat_room.html
@@ -21,7 +21,7 @@
 			-->
 			<div class="table-responsive">
 				<table class="table table-hover">
-
+					<tbody>
 					{{ range .rooms }}
 					<tr>
 						<td>
