--- a/assets/login.html
+++ b/assets/login.html
@@ -11,12 +11,12 @@
     <!-- Custom styles for this template -->
     <link href="../assets/sign-in.css" rel="stylesheet">
   </head>
-  <body class="text-center">
+<body class="text-center bg-dark">
     
 <main class="form-signin w-100 m-auto">
   <form action="/{{ .action }}" method="post" enctype="multipart/form-data">
     <img class="mb-4" src="../assets/logo.svg" alt="" width="72" height="57">
-    <h1 class="h3 mb-3 fw-normal">请登录您的账号</h1>
+    <h1 class="h3 mb-3 fw-normal text-white">云盘登录</h1>
 
     <div class="form-floating">
       <input type="text" name="username" class="form-control" id="floatingInput" placeholder="Username">
@@ -27,12 +27,12 @@
       <label for="floatingPassword">Password</label>
     </div>
 
-    <div class="checkbox mb-3">
+    <div class="checkbox mb-3 text-white">
       <label>
         <input type="checkbox" value="remember-me"> Remember me
       </label>
     </div>
-    <button class="w-100 btn btn-lg btn-dark" type="submit">登录</button>
+    <button class="w-100 btn btn-lg btn-primary" type="submit">登录</button>
     <p class="mt-5 mb-3 text-muted">&copy; 2023–2028</p>
   </form>
 </main>
