--- a/assets/chat_room_login.html
+++ b/assets/chat_room_login.html
@@ -14,17 +14,16 @@
 <body class="text-center bg-dark">
     
 <main class="form-signin w-100 m-auto">
-  <form action="/chat_room" method="post" enctype="multipart/form-data" class="was-validated">
+	<form action="/chat/{{ .roomname }}" method="post" enctype="multipart/form-data" class="was-validated">
     <img decoding="async" class="mb-4" src="../assets/logo.svg" alt="" width="72" height="57">
-    <h1 class="h3 mb-3 fw-normal text-white">moon聊天室</h1>
+	<h1 class="h3 mb-3 fw-normal text-white">{{ .roomname }}</h1>
 
     <div class="form-floating mb-3">
-      <input type="text" name="username" class="form-control" id="floatingInput" required>
-	  <div class="valid-feedback">验证成功！</div>
-      <div class="invalid-feedback">请输入昵称</div>
+      <input type="password" name="password" class="form-control" id="floatingInput" required>
+      <div class="invalid-feedback">请输入房间密码</div>
     </div>
 
-    <button class="w-100 btn btn-lg btn-warning" type="submit">登录</button>
+    <button class="w-100 btn btn-lg btn-warning" type="submit">进入</button>
     <p class="mt-3 mb-3 text-muted">&copy; 2023–2028</p>
   </form>
 </main>
