--- a/assets/chat_login.html
+++ b/assets/chat_login.html
@@ -16,7 +16,7 @@
 <main class="form-signin w-100 m-auto">
   <form action="/chat_room" method="post" enctype="multipart/form-data" class="was-validated">
     <img decoding="async" class="mb-4" src="../assets/logo.svg" alt="" width="72" height="57">
-    <h1 class="h3 mb-3 fw-normal text-white">moon聊天室</h1>
+    <h1 class="h3 mb-3 fw-normal text-white">请输入聊天昵称</h1>
 
     <div class="form-floating mb-3">
       <input type="text" name="username" class="form-control" id="floatingInput" required>
