--- a/assets/chat.html
+++ b/assets/chat.html
@@ -36,25 +36,29 @@
     </div>
     <div class="col-sm-4 mb-3">
         <div class="container mt-2 mb-3">
-			<h3 class="text-white">{{ .roomname }}</h3>
+			<div class="clearfix">
+				<span class="float-start"><h3 class="text-white">{{ .roomname }}</h3></span>
+				<span class="float-end"><button class="btn btn-danger btn-sm" id="quit">退出房间</button></span>
+			</div>
 			<div class="input-group mt-2">
 				<input placeholder="say something" id="text" type="text" class="form-control">
 				<span class="input-group-text bg-primary text-white" id="send">发&nbsp;送</span>
-				<span class="input-group-text bg-danger text-white" id="refresh">刷&nbsp;新</span>
+				<span class="input-group-text bg-info text-white" id="refresh">刷&nbsp;新</span>
+				<!-- <span class="input-group-text bg-danger text-white" id="quit">退&nbsp;出</span> -->
 			</div>
         </div>
 		<div class="mt-3 ms-4 me-4 mb-5">
 			<!--<pre id="chat" class="text-justify">{{ range .chatmsg }}{{ . }}{{ end }}
 			</pre>-->
 			<div id="chat" class="text-justify scrollable">
-			{{ range .chatmsg }}
-			<!--<p class="text-muted">
-			{{ . }}
-			</p>-->
-			<div class="alert alert-success" role="alert">
-			{{ . }}
-			</div>
-			{{ end }}
+				{{ range .chatmsg }}
+				<!--<p class="text-muted">
+				{{ . }}
+				</p>-->
+				<div class="alert alert-success" role="alert">
+				{{ . }}
+				</div>
+				{{ end }}
 			</div>
 		</div>
     </div>
@@ -176,6 +180,10 @@ $(document).ready(function(){
 			var uname = $("#username").text();
 			var rname = $("#roomname").text();
 			window.location.href = "/chat/"+rname+"?username="+uname;
+		});
+
+		$("#quit").click(function() {
+			window.location.href = "/chat_room";
 		});
 
 		console.log("init finished");
