--- a/assets/chat.html
+++ b/assets/chat.html
@@ -9,6 +9,9 @@
     <script src="https://cdn.staticfile.org/twitter-bootstrap/5.1.1/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.staticfile.org/jquery/1.10.2/jquery.min.js"></script>
 	<style>
+		#main {
+			max-width: 650px;
+		}
 		#chat {
 			text-align: left;
 			background: #f1f1f1;
@@ -29,13 +32,9 @@
 <body class="bg-dark">
 <span id="username" hidden>{{ .username }}</span>
 <span id="roomname" hidden>{{ .roomname }}</span>
-<div class="row mt-2">
-    <div class="col-sm-4">
-        <div class="container border-end border-start">
-        </div>
-    </div>
-    <div class="col-sm-4 mb-3">
-        <div class="container mt-2 mb-3">
+<div class="container-fluid mt-2">
+    <div class="container mb-3" id="main">
+        <div class="container-fluid mt-2 mb-3">
 			<div class="clearfix">
 				<span class="float-start"><h3 class="text-white">{{ .roomname }}</h3></span>
 				<span class="float-end"><button class="btn btn-danger btn-sm" id="quit">退出房间</button></span>
@@ -47,7 +46,7 @@
 				<!-- <span class="input-group-text bg-danger text-white" id="quit">退&nbsp;出</span> -->
 			</div>
         </div>
-		<div class="mt-3 ms-4 me-4 mb-5">
+		<div class="container mt-3 mb-5">
 			<!--<pre id="chat" class="text-justify">{{ range .chatmsg }}{{ . }}{{ end }}
 			</pre>-->
 			<div id="chat" class="text-justify scrollable">
@@ -61,10 +60,6 @@
 				{{ end }}
 			</div>
 		</div>
-    </div>
-    <div class="col-sm-4">
-        <div class="container border-end border-start">
-        </div>
     </div>
 </div>
 
