--- a/assets/download_list.html
+++ b/assets/download_list.html
@@ -11,7 +11,7 @@
 <body>
 {{ template "nav.html" . }}
 <div class="row mt-2">
-    {{ template "download_left.html" . }}
+    {{ template "download_right.html" . }}
     <div class="col-sm-8 mt-3">
         <div class="container mt-3">
 			<!--
@@ -34,7 +34,9 @@
 					<tr id="{{ DelPoint . }}">
 						<td>
 							<span>{{ . }}</span>
-
+						</td>
+						<td>
+							<a href="/resource/{{ . }}" name="{{ . }}">{{ . }}</a>
 						</td>
 						<td>
 							<div class="btn-group">
@@ -52,7 +54,8 @@
 			</div>
 		</div>
     </div>
-    {{ template "download_right.html" . }}
+    <div class="col-sm-2 mt-3">
+	</div>
 </div>
 {{ template "upload_frame.html" . }}
 <script src="../assets/download.js"></script>
